--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "/src/server.js"
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "/api"
+        }
     ]
 }
